--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "camper-leaderboard",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "./build/index.html",
   "scripts": {
     "build": "webpack"
   },
@@ -24,6 +24,7 @@
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.0",
